<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/param0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/param0" />

    <TextView
        android:id="@+id/param1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/param0"
        android:layout_below="@+id/param0"
        android:text="@string/param1" />

    <TextView
        android:id="@+id/param2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/param1"
        android:layout_below="@+id/param1"
        android:text="@string/param2" />

    <TextView
        android:id="@+id/angle_phi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/angle_gamma"
        android:layout_below="@+id/param2"
        android:layout_marginTop="10dp"
        android:text="@string/angle_phi" />

    <TextView
        android:id="@+id/angle_theta"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/angle_gamma"
        android:layout_height="wrap_content"
        android:layout_below="@+id/angle_phi"
        android:text="@string/angle_theta" />

    <TextView
        android:id="@+id/angle_gamma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/angle_theta"
        android:text="@string/angle_gamma" />

    <TextView
        android:id="@+id/angle_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/angle_gamma"
        android:layout_marginTop="10dp"
        android:text="@string/angle_x" />

    <TextView
        android:id="@+id/angle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/angle_0"
        android:text="@string/angle_y" />

    <TextView
        android:id="@+id/angle_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/angle_1"
        android:text="@string/angle_z" />


    <TextView
        android:id="@+id/val0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/param0"
        android:layout_toRightOf="@+id/param0"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/val1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/param1"
        android:layout_toRightOf="@+id/param1"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/val2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/param2"
        android:layout_toRightOf="@+id/param2"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/val0"
        android:layout_toRightOf="@+id/val0"
        android:gravity="right"
        android:layout_alignParentRight="true"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/angle_phi_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/angle_phi"
        android:layout_toRightOf="@+id/angle_phi"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/angle_theta_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/angle_theta"
        android:layout_toRightOf="@+id/angle_theta"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/angl_gamma_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/angle_gamma"
        android:layout_toRightOf="@+id/angle_gamma"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/angle_0_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/angle_0"
        android:layout_toRightOf="@+id/angle_0"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/angle_1_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/angle_1"
        android:layout_toRightOf="@+id/angle_1"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/angle_2_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/angle_2"
        android:layout_toRightOf="@+id/angle_2"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/orientation_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_alignTop="@+id/angle_0_val"
        android:layout_toRightOf="@+id/angle_0_val"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/accuracy_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_alignTop="@+id/angle_1_val"
        android:layout_toRightOf="@+id/angle_1_val"
        android:text="@string/dummy" />

    <!--
    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/orientation" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    -->

</RelativeLayout>